--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <meta name="description" content="An interactive site with tools to encrypt and decrypt messages using well-known ciphers. Learn more about how these ciphers work, and have fun creating your own secret messages!" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Spectral+SC:ital,wght@0,400;0,500;1,400;1,500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Spectral:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <title>The Cipher Codex</title>
   </head>
   <body>
